[package]
name = "estimation-engine"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
futures = { version = "0.3.21", default-features = false }
futures-util = "0.3.21"
lazy_static = "1.4.0"
mime = "0.3.16"
mustache = "0.9.0"
poem = { version = "1.3.58", features = ["embed", "session", "websocket"]}
rand = "0.8.5"
rust-embed = "8.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.68"
shuttle-poem = "0.29.0"
shuttle-runtime = "0.29.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }